lustre/lov/lov_ea.c
@@ -61,33 +61,32 @@ struct lovea_unpack_args {
 static int lsm_lmm_verify_common(struct lov_mds_md *lmm, int lmm_bytes,
                                  __u16 stripe_count)
 {
-
-        if (stripe_count == 0 || stripe_count > LOV_V1_INSANE_STRIPE_COUNT) {
-                CERROR("bad stripe count %d\n", stripe_count);
-                lov_dump_lmm(D_WARNING, lmm);
-                return -EINVAL;
-        }
-
-	if (lmm_oi_id(&lmm->lmm_oi) == 0) {
-		CERROR("zero object id\n");
-		lov_dump_lmm(D_WARNING, lmm);
+	if (stripe_count == 0 || stripe_count > LOV_V1_INSANE_STRIPE_COUNT) {
+		CERROR("bad stripe count %d\n", stripe_count);
+		lov_dump_lmm_common(D_WARNING, lmm);
 		return -EINVAL;
 	}
 
-        if (lmm->lmm_pattern != cpu_to_le32(LOV_PATTERN_RAID0)) {
-                CERROR("bad striping pattern\n");
-                lov_dump_lmm(D_WARNING, lmm);
-                return -EINVAL;
-        }
+	if (lmm_oi_id(&lmm->lmm_oi) == 0) {
+		CERROR("zero object id\n");
+		lov_dump_lmm_common(D_WARNING, lmm);
+		return -EINVAL;
+	}
 
-        if (lmm->lmm_stripe_size == 0 ||
-             (le32_to_cpu(lmm->lmm_stripe_size)&(LOV_MIN_STRIPE_SIZE-1)) != 0) {
-                CERROR("bad stripe size %u\n",
-                       le32_to_cpu(lmm->lmm_stripe_size));
-                lov_dump_lmm(D_WARNING, lmm);
-                return -EINVAL;
-        }
-        return 0;
+	if (lmm->lmm_pattern != cpu_to_le32(LOV_PATTERN_RAID0)) {
+		CERROR("bad striping pattern\n");
+		lov_dump_lmm_common(D_WARNING, lmm);
+		return -EINVAL;
+	}
+
+	if (lmm->lmm_stripe_size == 0 ||
+	    (le32_to_cpu(lmm->lmm_stripe_size)&(LOV_MIN_STRIPE_SIZE-1)) != 0) {
+		CERROR("bad stripe size %u\n",
+		       le32_to_cpu(lmm->lmm_stripe_size));
+		lov_dump_lmm_common(D_WARNING, lmm);
+		return -EINVAL;
+	}
+	return 0;
 }
 
 struct lov_stripe_md *lsm_alloc_plain(__u16 stripe_count, int *size)
@@ -195,22 +194,22 @@ static void lov_tgt_maxbytes(struct lov_tgt_desc *tgt, __u64 *stripe_maxbytes)
 static int lsm_lmm_verify_v1(struct lov_mds_md_v1 *lmm, int lmm_bytes,
                              __u16 *stripe_count)
 {
-        if (lmm_bytes < sizeof(*lmm)) {
-                CERROR("lov_mds_md_v1 too small: %d, need at least %d\n",
-                       lmm_bytes, (int)sizeof(*lmm));
-                return -EINVAL;
-        }
+	if (lmm_bytes < sizeof(*lmm)) {
+		CERROR("lov_mds_md_v1 too small: %d, need at least %d\n",
+		       lmm_bytes, (int)sizeof(*lmm));
+		return -EINVAL;
+	}
 
-        *stripe_count = le16_to_cpu(lmm->lmm_stripe_count);
+	*stripe_count = le16_to_cpu(lmm->lmm_stripe_count);
 
-        if (lmm_bytes < lov_mds_md_size(*stripe_count, LOV_MAGIC_V1)) {
-                CERROR("LOV EA V1 too small: %d, need %d\n",
-                       lmm_bytes, lov_mds_md_size(*stripe_count, LOV_MAGIC_V1));
-                lov_dump_lmm_v1(D_WARNING, lmm);
-                return -EINVAL;
-        }
+	if (lmm_bytes < lov_mds_md_size(*stripe_count, LOV_MAGIC_V1)) {
+		CERROR("LOV EA V1 too small: %d, need %d\n",
+		       lmm_bytes, lov_mds_md_size(*stripe_count, LOV_MAGIC_V1));
+		lov_dump_lmm_common(D_WARNING, lmm);
+		return -EINVAL;
+	}
 
-        return lsm_lmm_verify_common(lmm, lmm_bytes, *stripe_count);
+	return lsm_lmm_verify_common(lmm, lmm_bytes, *stripe_count);
 }
 
 int lsm_unpackmd_v1(struct lov_obd *lov, struct lov_stripe_md *lsm,
@@ -261,27 +260,27 @@ const struct lsm_operations lsm_v1_ops = {
 static int lsm_lmm_verify_v3(struct lov_mds_md *lmmv1, int lmm_bytes,
                              __u16 *stripe_count)
 {
-        struct lov_mds_md_v3 *lmm;
+	struct lov_mds_md_v3 *lmm;
 
-        lmm = (struct lov_mds_md_v3 *)lmmv1;
+	lmm = (struct lov_mds_md_v3 *)lmmv1;
 
-        if (lmm_bytes < sizeof(*lmm)) {
-                CERROR("lov_mds_md_v3 too small: %d, need at least %d\n",
-                       lmm_bytes, (int)sizeof(*lmm));
-                return -EINVAL;
-        }
+	if (lmm_bytes < sizeof(*lmm)) {
+		CERROR("lov_mds_md_v3 too small: %d, need at least %d\n",
+		       lmm_bytes, (int)sizeof(*lmm));
+		return -EINVAL;
+	}
 
-        *stripe_count = le16_to_cpu(lmm->lmm_stripe_count);
+	*stripe_count = le16_to_cpu(lmm->lmm_stripe_count);
 
-        if (lmm_bytes < lov_mds_md_size(*stripe_count, LOV_MAGIC_V3)) {
-                CERROR("LOV EA V3 too small: %d, need %d\n",
-                       lmm_bytes, lov_mds_md_size(*stripe_count, LOV_MAGIC_V3));
-                lov_dump_lmm_v3(D_WARNING, lmm);
-                return -EINVAL;
-        }
+	if (lmm_bytes < lov_mds_md_size(*stripe_count, LOV_MAGIC_V3)) {
+		CERROR("LOV EA V3 too small: %d, need %d\n",
+		       lmm_bytes, lov_mds_md_size(*stripe_count, LOV_MAGIC_V3));
+		lov_dump_lmm_common(D_WARNING, lmm);
+		return -EINVAL;
+	}
 
-        return lsm_lmm_verify_common((struct lov_mds_md_v1 *)lmm, lmm_bytes,
-                                     *stripe_count);
+	return lsm_lmm_verify_common((struct lov_mds_md_v1 *)lmm, lmm_bytes,
+				     *stripe_count);
 }
 
 int lsm_unpackmd_v3(struct lov_obd *lov, struct lov_stripe_md *lsm,
